--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Namoz vaqtlari</string>
+    <string name="xудудни_танланг">Ҳудудни танланг</string>
+    <string name="намоз_вақтларини_олиш_учун_xудудингизни_танланг">Намоз вақтларини олиш учун xудудингизни танланг!</string>
+    <string name="танлаш">Танлаш</string>
 </resources>
